# egift

./: README.md  index.html  package.json  pnpm-lock.yaml  postcss.config.cjs  vite.config.js
.github/workflows/: build-tauri.yml  main-release.yml
docs/adr/: 0001-lan-guest-screen.md
docs/plans/: 2026-07-17-lan-guest-screen.md
scripts/: configure-android-safe-area.mjs
src/: GuestScreen.vue  ProfessionalApp.vue  guest-screen.css  main.js  professional.css  responsive.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lan_server.rs  lan_viewer.html  lib.rs  main.rs
src/utils/: giftBookFormat.js
