[package]
name = "gift-ledger"
version = "0.1.1"
description = "电子礼簿桌面与移动应用"
authors = ["JBD"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "gift_ledger_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
tauri = { version = "2.11.3", features = [] }

[profile.dev]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
